--- a/code/PSBlog/PSBlog.csproj
+++ b/code/PSBlog/PSBlog.csproj
@@ -193,6 +193,7 @@
     <Content Include="Content\bootstrap\css\justified-nav.css" />
     <Content Include="Content\bootstrap\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\icons\github.png" />
+    <Content Include="Content\LoginStyle.css" />
     <Content Include="Content\themes\base\images\animated-overlay.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
