--- a/code/PSBlog.Util.Test/PSBlog.Util.Test.csproj
+++ b/code/PSBlog.Util.Test/PSBlog.Util.Test.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SHATest.cs" />
+    <Compile Include="SlugTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
