--- a/code/PSBlog.Util/PSBlog.Util.csproj
+++ b/code/PSBlog.Util/PSBlog.Util.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SHA.cs" />
+    <Compile Include="Slug.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
