--- a/code/PSBlog/Web.config
+++ b/code/PSBlog/Web.config
@@ -51,14 +51,15 @@
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
+    <membership defaultProvider="PSBlogMembershipProvider">
       <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <add name="PSBlogMembershipProvider" type="PSBlog.Authentication.PSBlogMembershipProvider, PSBlog"   />
       </providers>
     </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
+    <roleManager defaultProvider="PSBlogRoleProvider">
       <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        <clear/>
+        <add name="PSBlogRoleProvider" type="PSBlog.Authentication.PSBlogRoleProvider, PSBlog"  />
       </providers>
     </roleManager>
     <!--
