added code for granting and taking away adminRole

--- a/code/PSBlog/Web.config
+++ b/code/PSBlog/Web.config
@@ -14,6 +14,9 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PSBlog.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PSBlog-20131107164739;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PSBlog-20131107164739.mdf" />
@@ -159,4 +162,14 @@
       </handlers>
     </system.webServer>
   </location>
+  <applicationSettings>
+    <PSBlog.Properties.Settings>
+      <setting name="SuperAdminName" serializeAs="String">
+        <value>admin</value>
+      </setting>
+      <setting name="SuperAdminRole" serializeAs="String">
+        <value>admin</value>
+      </setting>
+    </PSBlog.Properties.Settings>
+  </applicationSettings>
 </configuration>
