--- a/code/PSBlog/Web.config
+++ b/code/PSBlog/Web.config
@@ -48,18 +48,20 @@
     </pages>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
+        <clear/>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </profile>
-    <membership defaultProvider="PSBlogMembershipProvider">
-      <providers>
-        <add name="PSBlogMembershipProvider" type="PSBlog.Authentication.PSBlogMembershipProvider, PSBlog"   />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="PSBlogRoleProvider">
+    <membership defaultProvider="PSBlogMembershipProvider" >
       <providers>
         <clear/>
-        <add name="PSBlogRoleProvider" type="PSBlog.Authentication.PSBlogRoleProvider, PSBlog"  />
+        <add name="PSBlogMembershipProvider" type="PSBlog.Authentication.PSBlogMembershipProvider"/>
+      </providers>
+    </membership>
+    <roleManager defaultProvider="PSBlogRoleProvider" enabled="true"  >
+      <providers>
+        <clear/>
+        <add name="PSBlogRoleProvider" type="PSBlog.Authentication.PSBlogRoleProvider" applicationName="/" />
       </providers>
     </roleManager>
     <!--
