added function to delete blogs

--- a/code/PSBlog/packages.config
+++ b/code/PSBlog/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="netfx-IpsumGenerator" version="1.0.0.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net45" />
